# db_Api

./: Curls.md  Dockerfile  README.eu.md  README.md  docker-compose.yml  pyproject.toml  setup.cfg
db/: New_DB
src/: app.py  competition_result.py  competitor.py  config.yml
src/api/: controller.py  handler.py  schemas.py
src/service/: middlewares.py  resources.py  routes.py  tracing.py
src/tests/: New_DB  conftest.py
src/tests/integration/api/: test_api.py
src/tests/src/: config.yml
src/tests/unit/: test_shcemas.py
